src/objects/General_Task__c.object
<CustomObject>
    <description>This is generic workflow object which will be used across different modules. All tasks recordtypes are part of this object.</description>
    <fields>
        <fullName>Add_Effectiveness_verificiation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Effectiveness verificiation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdhocTask_Title__c</fullName>
        <description>AdhocTask Title to display tasks</description>
        <label>AdhocTask Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adhoc_Sequence__c</fullName>
        <description>Adhoc Task sequence numbers</description>
        <label>Adhoc Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TEXT(IF(ISBLANK(Task_Closed_Date__c),TODAY() - DATEVALUE(CreatedDate), Task_Closed_Date__c - DATEVALUE(CreatedDate)))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <picklist>
            <picklistValues>
                <fullName>Change Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change DueDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Containment Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <label>Approval Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approver Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAPA_Effectiveness__c</fullName>
        <label>CAPA Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>Effective</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPA_ID__c</fullName>
        <formula>CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CAPA__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_ID__c</fullName>
        <formula>Change_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Management_Owner_Name__c</fullName>
        <formula>Change_Management__r.Owner_Name__c</formula>
        <label>Change Management Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>Change_Management__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Owner_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Owner Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closure_Comment__c</fullName>
        <label>Closure Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collaboration_Title__c</fullName>
        <label>Collaboration Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By_Name__c</fullName>
        <formula>Completed_By__r.LastName &amp; &quot;, &quot; &amp; Completed_By__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_TasksnTvp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_New_CAPA__c</fullName>
        <label>Create New CAPA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentApprovalSequenceNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Keep Status Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expire</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Summary__c</fullName>
        <label>Investigation Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investigation_Tools__c</fullName>
        <label>Investigation Tools</label>
        <picklist>
            <picklistValues>
                <fullName>Cause &amp; Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six Sigma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Whys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NC_ID__c</fullName>
        <formula>Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Due_Date__c</fullName>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Expiration_Date__c</fullName>
        <label>New Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NonConformanceName__c</fullName>
        <description>Formula field is created for getting NC owner name on General task object while sending the Email template to the User</description>
        <formula>Non_Conformance__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonConformanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>Non_Conformance__c</referenceTo>
        <relationshipLabel>General Tasks</relationshipLabel>
        <relationshipName>General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver_Owner_DueDate__c</fullName>
        <label>Note To Approver Owner/DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective_Evidence__c</fullName>
        <label>Objective Evidence</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>Owner__r.FirstName &amp; &quot;,&quot;&amp;  Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Owner of general Task</description>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Child_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_File_Location__c</fullName>
        <label>Primary File Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposedTaskOwnerName__c</fullName>
        <description>Formula field is created for getting Proposed owner name on General task object while sending the Email template to the User</description>
        <formula>New_Owner__r.LastName  &amp; &quot; &quot; &amp;New_Owner__r.FirstName</formula>
        <label>ProposedTaskOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Description__c</fullName>
        <label>Review Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Position__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sequence in which task should be performed.</description>
        <inlineHelpText>Sequence in which task should be performed. For example, if value is &apos;3&apos; then tasks with sequence numbers &apos;1&apos; and &apos;2&apos; should be performed first.</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Off_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Off By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NC_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sign_Off_date__c</fullName>
        <label>Sign Off date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending ActionPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Pending Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Closed_Date__c</fullName>
        <description>This field will be populated with Task closed date</description>
        <label>Task Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <displayFormat>NCT-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Reopen_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Reopen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Tasks9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Reopen_Date__c</fullName>
        <label>Task Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Approval_Required__c</fullName>
        <label>Temp Approval Required</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Change_Owner_value__c</fullName>
        <label>Temp Change Owner value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is to delete record upon user selection of NC Task.</description>
        <label>delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <label>isSubmitted</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>General Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sequence_Position__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Non_Conformance__c</columns>
        <columns>Document_Profile__c</columns>
        <columns>Change_Management__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CAPA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Non_Conformance__c</columns>
        <columns>NAME</columns>
        <columns>AdhocTask_Title__c</columns>
        <columns>NonConformanceName__c</columns>
        <columns>ProposedTaskOwnerName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Age__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GT-{0000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Tasks</pluralLabel>
    <recordTypes>
        <fullName>AdhocTask</fullName>
        <active>true</active>
        <label>AdhocTask</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closure</fullName>
        <active>true</active>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>CollaborationReview</fullName>
        <active>true</active>
        <description>CollaborationReview</description>
        <label>CollaborationReview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Containment</fullName>
        <active>true</active>
        <label>Containment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disposition</fullName>
        <active>true</active>
        <label>Disposition</label>
    </recordTypes>
    <recordTypes>
        <fullName>DocumentChange</fullName>
        <active>true</active>
        <label>DocumentChange</label>
    </recordTypes>
    <recordTypes>
        <fullName>EffectivenessReview</fullName>
        <active>true</active>
        <label>EffectivenessReview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementation</fullName>
        <active>true</active>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allowed_days_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Allowed_Days__c)</errorConditionFormula>
        <errorDisplayField>Allowed_Days__c</errorDisplayField>
        <errorMessage>Allowed days is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NC_Approver_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Approver__c ),  ISPICKVAL(Approval_Required__c , &quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>NC Approver is required.</errorMessage>
    </validationRules>
</CustomObject>